# rust-uniq-ch

./: .copier-answers.yml  Cargo.toml  README.md  deny.toml  justfile
.cargo/: config.toml
.github/workflows/: continuous-integration.yml
benches/: insert.rs  len.rs
examples/: insert_plot.rs
src/: lib.rs  precision.rs
tests/: serde.rs
