[package]
name = "uniq-ch"
version = "0.1.0"
edition = "2021"
description = "A Rust library for counting distinct elements in a stream, using ClickHouse uniq data structure."
repository = "https://github.com/vivienm/rust-uniq-ch"
documentation = "https://vivienm.github.io/rust-uniq-ch/docs/uniq_ch/"
license = "MIT"

[dependencies]
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
highway = "0.8.1"
plotters = { version = "0.3.4", default-features = false, features = ["area_series", "bitmap_backend", "bitmap_encoder"] }
serde_json = "1.0.87"

[features]
serde = ["dep:serde"]
