[package]
name = "uniq-ch"
version = "0.1.0"
edition = "2021"
description = "A Rust library for counting distinct elements in a stream, using ClickHouse uniq data structure."
repository = "https://github.com/vivienm/rust-uniq-ch"
documentation = "https://vivienm.github.io/rust-uniq-ch/docs/uniq_ch/"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0.208", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
highway = "1.2.0"
plotters = { version = "0.3.6", default-features = false, features = ["area_series", "bitmap_backend", "bitmap_encoder"] }
serde_json = "1.0.125"

[features]
serde = ["dep:serde"]
